# Pytorch-UNet

./: .gitignore  README.md  check_h5_file.py  compare_ep.py  compare_loss.py  conda_env.yml  config.json  convert_loss.py  dice_loss.py  environment.yml  eval-epoch.py  eval.py  eval.sh  eval_loss_sample.py  eval_loss_sample.sh  eval_util.py  eval_util_test.py  h5_utils.py  hdf5_dataset.py  inspect_h5.py  make_loss_dist.py  plot_epoch.py  predict.py  predict.sh  predict_h5.py  requirements.txt  roi-count.ipynb  tensor-board.py  test-index.py  to-ts.py  train.py  train.sh  train2.py  train2.sh  train3.py  train3.sh  train_h5.py  training_track.ipynb
cpp/: CMakeLists.txt  cmake.sh  cuda-env.sh  hello.cpp  pthread.cpp  test-ts.cpp  thread.cpp  to-ts.py
nestedunet/: __init__.py  model.py
notebooks/: roi-count.ipynb
old/: train.py  train2.py  train3.sh
plotters/: plot_epoch.py
scripts/: h5plot.py
transformer/: model.py  part.py
unet/: model.py  unet_model.py
uresnet/: __init__.py  model.py  parts.py
utils/: .h5_utils.py.swo  __init__.py  h5_utils.py  log_utils.py  utils.py
